# rasarindex

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Singularity.r-index  bwtsa.cpp  ri-align.cpp  ri-buildfasta.cpp  ri-query-rasa.cpp  ri-query.cpp  ri-rasa-tree-test.cpp  ri-rasa.cpp  sa_print.cpp
data/dengue/: reads.fq  reads_w_errors.fq
internal/: bwt_scan.hpp  csatree_classic.hpp  r_index.hpp  ri_aligner.hpp  ri_rasa.hpp  ri_rasa_tree.hpp  ri_rasa_tree_new.hpp  rle_string.hpp  sparse_hyb_vector.hpp  sparse_sd_vector.hpp  succinct_bit_vector.hpp  utils.hpp
rasa_tests/: rasa-query.cpp  rasa-tree-load.cpp  rasa-tree-query.cpp  rasa_README.md  rasa_common.hpp  ri-query.cpp  ri-rads-test.cpp  ri-rasa-tree-test.cpp  samples.txt  test_rads
scripts/: compare_sam_to_ground_truth.py  convert_offsets.py  create_indexes.sh  dneighbors.py  fasta_fastq.py  filter_sam.py  find_mismatches.py  frankengenome.py  frankengenome.sh  frankengenome_to_fasta.sh  make_chimera.py  random_seq.sh  read_to_seeds.py  ri-align_w_processing.sh  sam_remove_repeats.py  simulate_reads.sh  test_bowtie.sh  test_variants.sh  test_versions.all_hits.sh  test_versions.sh  utils.py  vcf_to_fasta.sh  wgsim
scripts/sam/: convert_offsets.py  sam_remove_repeats.py
scripts/seq/: fasta_fastq.py  make_chimera.py  read_to_seeds.py  simulate_reads.sh
scripts/shortcuts/: ri-align_w_processing.sh
scripts/test/: test_bowtie.sh  test_variants.sh  test_versions.all_hits.sh  test_versions.sh
scripts/vcf/: vcf_to_fasta.sh
